@@ -123,12 +123,16 @@ class ApiQueryAllImages extends ApiQueryGeneratorBase {
 			}
 
 			// Image filters
-			$from = ( is_null( $params['from'] ) ? null : $this->titlePartToKey( $params['from'] ) );
-			$to = ( is_null( $params['to'] ) ? null : $this->titlePartToKey( $params['to'] ) );
+			$from = ( is_null( $params['from'] ) ? null : 
+					$this->titlePartToKey( $params['from'], NS_FILE ) );
+			$to = ( is_null( $params['to'] ) ? null : 
+					$this->titlePartToKey( $params['to'], NS_FILE ) );
 			$this->addWhereRange( 'img_name', ( $ascendingOrder ? 'newer' : 'older' ), $from, $to );
 
 			if ( isset( $params['prefix'] ) ) {
-				$this->addWhere( 'img_name' . $db->buildLike( $this->titlePartToKey( $params['prefix'] ), $db->anyString() ) );
+				$this->addWhere( 'img_name' . $db->buildLike( 
+						$this->titlePartToKey( $params['prefix'], NS_FILE ), 
+						$db->anyString() ) );
 			}
 		} else {
 			// Check mutually exclusive params
