@@ -133,6 +133,11 @@ production.
 * (bug 43137) Don't return the sha1 of revisions through the API if the content is
   revision-deleted
 * ApiQueryImageInfo now also returns imageinfo for redirects.
+* (bug 25702) list=allimages, list=alllinks, list=allpages, list=deletedrevs
+  and list=filearchive did not handle case-sensitivity properly for all 
+  parameters.
+* ApiQueryBase::titlePartToKey allows an extra parameter that indicates the 
+  namespace in order to properly capitalize the title part 
 
 === Languages updated in 1.21 ===
 
